RESOLVED FIXED49708
Stop recompiling functions to regenerate exception info.
https://bugs.webkit.org/show_bug.cgi?id=49708
Summary Stop recompiling functions to regenerate exception info.
Gavin Barraclough
Reported 2010-11-17 19:30:32 PST
Instead only hold info as necessary – keep divot info is the inspector is enabled, line number info is debugging or profiling, and handler info for functions with try/catch.
Attachments
Preliminary patch (53.55 KB, patch)
2010-11-17 19:31 PST, Gavin Barraclough
no flags
the patch (56.16 KB, patch)
2010-11-18 18:20 PST, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2010-11-17 19:31:02 PST
Created attachment 74196 [details] Preliminary patch
Gavin Barraclough
Comment 2 2010-11-18 18:20:22 PST
Created attachment 74336 [details] the patch
Oliver Hunt
Comment 3 2010-11-18 18:25:52 PST
Comment on attachment 74336 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=74336&action=review > WebKitTools/DumpRenderTree/mac/DumpRenderTree.mm:992 > +// return shouldOpenWebInspector(pathOrURL) || strstr(pathOrURL, "inspector-enabled/"); Fix this!!!
Gavin Barraclough
Comment 4 2010-11-18 18:35:43 PST
fixed in r72360
Note You need to log in before you can comment on or make changes to this bug.