Build fix - as per DRT-mac, always enabled developer extras, in win/qt/gtk DRT.

This is necessary to enable rich exception messages to be generated
following https://bugs.webkit.org/show_bug.cgi?id=49708.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(shouldEnableDeveloperExtras):
* DumpRenderTree/qt/DumpRenderTreeQt.cpp:
(WebCore::shouldEnableDeveloperExtras):
* DumpRenderTree/win/DumpRenderTree.cpp:
(shouldEnableDeveloperExtras):



Canonical link: https://commits.webkit.org/62828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72366 268f45cc-cd09-0410-ab3c-d52691b4dbfc